<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBasic"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/signInTitle"
        android:textColor="@color/colorAccent"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUpActivity_textViewSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/signInMessage1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/signUpActivity_textViewSignUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/signInMessage2"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/signUpActivity_textViewWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWarning"
        android:textSize="14sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/signUpActivity_editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints="@null"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/signInEmailHint"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/signUpActivity_editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:autofillHints="@null"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/signInPasswordHint"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/signUpActivity_buttonSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/colorAccent"
        android:stateListAnimator="@null"
        android:text="@string/signInButton"
        android:textColor="@color/colorBasic"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="37dp"
        android:text="@string/signInTextButton_sub"
        android:textSize="14sp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/signUpActivity_linearLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpActivity_textViewLogin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInTextButton_left"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/signUpActivity_textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInTextButton"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUpActivity_textViewLogin_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInTextButton_right"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>
