<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBasic"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/findPasswordTitle"
        android:textColor="@color/colorAccent"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:text="@string/findPasswordMessage"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/findActivity_editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/findPasswordHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/findActivity_buttonFindPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="55dp"
        android:backgroundTint="@color/colorAccent"
        android:stateListAnimator="@null"
        android:text="@string/findPasswordButton"
        android:textColor="@color/colorBasic"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/findActivity_textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent" />
</LinearLayout>